fix overlapping divs; add content to main page

--- a/css/globals.css
+++ b/css/globals.css
@@ -1,4 +1,5 @@
 
 :root {
-    --header-height: 500px;
+    --min-header-height: 400px;
+    --header-height: 80vh;
 }
